Revision history for Dist-Zilla-Plugins-CJM

Note: the version number of a plugin is the version of the dist in
which it was last changed.

4.23   NOT
	[Test::PrereqsFromMeta]
	  - Make insufficient version just a warning instead of a failure
	  - Allow undefined version to fulfill prerequisite version 0

4.22   2014-04-05
	[=Dist::Zilla::Role::ModuleInfo]
	  - Use encoded_content with Dist::Zilla 5 (RT#94145)

4.21   2014-02-22
	[RecommendedPrereqs]
	  - Debug log each file scanned (turn on with dzil -v)

	[Test::PrereqsFromMeta]
	  - Special case for if.pm (modules named after keywords are tricky)

4.20   2013-08-24
	[TemplateCJM]
	  - now distributed separately (no longer part of this dist)

	[Test::PrereqsFromMeta]
	  - Handle an empty hash in prerequisites

4.17   2013-07-26
	[=Dist::Zilla::Role::ModuleInfo]
	  - die if Module::Metadata constructor fails (RT#87277)

4.16   2013-06-15
	[ModuleBuild::Custom]
	  - fix spurious warning when using get_prereqs(1)

4.15   2013-05-25
	[MakeMaker::Custom]
	  - clarify that get_prereqs(1) requires Dist::Zilla 4.300032

	[ModuleBuild::Custom]
	  - add $api_version parameter to get_prereqs method

4.14   2013-05-18
	- no functional changes in this release, just improved tests
	- make mb_custom.t & mm_custom.t more flexible about version '0'

4.13   2013-04-04
	[GitVersionCheckCJM]
	  - fix compatibility with Git::Wrapper 0.028_96
	    (Don't pass Path::Class objects to Git::Wrapper)

	[MakeMaker::Custom]
	  - fix compatibility with Dist::Zilla 4.300032
	  - add $api_version parameter to get_prereqs method

	[=Dist::Zilla::Role::HashDumper]
	  - add extract_keys_as_hash method

4.12   2013-01-12
	[TemplateCJM]
	  - handle pure-POD files without package declaration or $VERSION
	    (Must be named *.pod and found in lib/ directory.)

4.11   2012-11-03
	- no functional changes in this release, just improved docs

	[MakeMaker::Custom]
	  - expand SYNOPSIS to show more complete example